--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -514,28 +514,28 @@
           <div class="home-clients__rightside home-section__rightside">
             <ul class="home-clients__list">
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-1.png" alt="">
+                <img src="../img/client-1.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-2.png" alt="">
+                <img src="../img/client-2.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-3.png" alt="">
+                <img src="../img/client-3.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-4.png" alt="">
+                <img src="../img/client-4.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-5.png" alt="">
+                <img src="../img/client-5.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-6.png" alt="">
+                <img src="../img/client-6.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-7.png" alt="">
+                <img src="../img/client-7.jpg" alt="">
               </li>
               <li class="home-clients__list js-client-item">
-                <img src="../img/client-8.png" alt="">
+                <img src="../img/client-8.jpg" alt="">
               </li>
             </ul>
           </div>
